--- a/public/components/home/homeView.html
+++ b/public/components/home/homeView.html
@@ -1,6 +1,7 @@
 <div ng-controller="HomeController" id="home-page">
-	<div class="grid" style="position:relative;">
-		<div class="col-4-12 push-1-12">
+	<main-header></main-header>
+	<div class="grid landing-content" style="position:relative;">
+		<div class="col-4-12 push-1-12 mobile-col-1-1 center-on-mobile">
 			<img src="assets/img/iphone-home.png" width="auto" height="500" />
 		</div>
 		<div class="col-6-12 home-display-text-col" style="">
@@ -9,6 +10,31 @@
 			</div>
 			<div class="home-display-body">
 				Zone is a small team of college students dedicated to keeping students eyes off their phones and on their books.
+			</div>
+		</div>
+	</div>
+	<div class="landing-about">
+		<div class="grid">
+			<div class="col-1-2 push-1-4 mobile-col-1-1">
+				<div align="center" class="home-display-title-2">
+					About
+				</div>
+				<div class="home-display-body-2">
+					Everyone knows how tough it is to resist the temptation of checking your phone when it beeps, rings, or vibrates. It’s hard to be disciplined enough to turn it off when you have a seven page essay staring back at you. We get it. 
+				</div>
+				<div class="home-display-body-2">
+					Zone provides that motivation. While using Zone, students are rewarded for putting their phones on Study Mode inside classrooms or libraries. The longer you stay in Study Mode, the more points you earn. Study Mode prevents students from receiving distracting calls, texts and app notifications until they have exited the app. 
+				</div>
+				<div class="home-display-body-2">
+					Now this is the part you’ll like. The points students earn can be used to redeem exciting deals and free stuff from your favorite local businesses. Doing the right thing just got easier. 
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer">
+		<div class="grid">
+			<div class="col-1-1">
+				&#169; Zone 2015
 			</div>
 		</div>
 	</div>
