--- a/public/partials/header/headerView.html
+++ b/public/partials/header/headerView.html
@@ -4,7 +4,7 @@
 			<img src="assets/img/logo copy.png" class="logo-img" height="50" width="auto" />
 		</div>
 		<div class="col-5-6 push-right nav-btn-col hide-on-mobile">
-			HOME &nbsp;&nbsp;ABOUT US &nbsp;&nbsp;CONTACT &nbsp;&nbsp;BUSINESS PORTAL &nbsp;&nbsp;LOG IN | REGISTER
+			<a id="bp-link" href="http://zonebusinessportal.com/">BUSINESS PORTAL</a>
 		</div>
 	</div>
 </div>
